--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       - GOARCH=arm64
       - CC=aarch64-linux-gnu-gcc
       - CXX=aarch64-linux-gnu-g++
-      - PKG_CONFIG_PATH=/usr/aarch64-linux-gnu/lib/pkgconfig:/opt/trimui-sdl2/lib/pkgconfig
-      - CGO_CFLAGS=-I/usr/aarch64-linux-gnu/include/SDL2 -I/opt/trimui-sdl2/include
-      - CGO_LDFLAGS=-L/usr/aarch64-linux-gnu/lib -L/opt/trimui-sdl2/lib
+      - PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
+      - CGO_CFLAGS=-I/usr/include/aarch64-linux-gnu -I/usr/include/aarch64-linux-gnu/SDL2 -D_REENTRANT
+      - CGO_LDFLAGS=-L/usr/lib/aarch64-linux-gnu -lSDL2_image -lSDL2_ttf -lSDL2 -ldl -lpthread -lm
     # Manter container ativo para desenvolvimento
     stdin_open: true
     tty: true
@@ -45,9 +45,9 @@ services:
       - GOARCH=arm64
       - CC=aarch64-linux-gnu-gcc
       - CXX=aarch64-linux-gnu-g++
-      - PKG_CONFIG_PATH=/usr/aarch64-linux-gnu/lib/pkgconfig:/opt/trimui-sdl2/lib/pkgconfig
-      - CGO_CFLAGS=-I/usr/aarch64-linux-gnu/include/SDL2 -I/opt/trimui-sdl2/include
-      - CGO_LDFLAGS=-L/usr/aarch64-linux-gnu/lib -L/opt/trimui-sdl2/lib
+      - PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
+      - CGO_CFLAGS=-I/usr/include/aarch64-linux-gnu -I/usr/include/aarch64-linux-gnu/SDL2 -D_REENTRANT
+      - CGO_LDFLAGS=-L/usr/lib/aarch64-linux-gnu -lSDL2_image -lSDL2_ttf -lSDL2 -ldl -lpthread -lm
     # Executa o script de build automaticamente
     command: /usr/local/bin/build-arm64.sh
 
